add chechen and japanese

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -500,6 +500,7 @@ ar:
         bul: Bul
         bur: Bur
         cau: Cau
+        che: Che
         ckb: Ckb
         cpe: Cpe
         cus: Cus
@@ -528,6 +529,7 @@ ar:
         hrv: Hrv
         hun: Hun
         ita: Ita
+        jpn: Jpn
         kik: Kik
         kin: Kin
         kor: Kor
@@ -757,6 +759,7 @@ ar:
         bul: لغة بلغارية - български
         bur: البورمية - မြန်မာစာ
         cau: لغة أباظية - абаза бызшва
+        che: لغة شيشانية - Noxčiyn mott/Нохчийн мотт
         ckb: لهجة كردية سورانية - سۆرانی
         cpe: الكاميروني - Pidgin
         cus: لغة ساهو - ሳሆኛ
@@ -785,6 +788,7 @@ ar:
         hrv: لغة كرواتية - hrvatski
         hun: لغة مجرية - magyar
         ita: لغة إيطالية - italiano
+        jpn: لغة يابانية - 日本語
         kik: زبان کیکویو - Gĩkũyũ
         kin: لغة كينيارواندا - kinyaRwanda
         kor: لغة كورية - 한국말 / 조선말
