--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -964,6 +964,7 @@ de:
         bul: Bul
         bur: Bur
         cau: Cau
+        che: Che
         ckb: Ckb
         cpe: Cpe
         cus: Cus
@@ -992,6 +993,7 @@ de:
         hrv: Hrv
         hun: Hun
         ita: Ita
+        jpn: Jpn
         kik: Kik
         kin: Kin
         kor: Kor
@@ -1242,6 +1244,7 @@ de:
         bul: Bulgarisch - български
         bur: Burmesisch - မြန်မာစာ
         cau: Abasinisch - абаза бызшва
+        che: Tschetschenisch - Noxčiyn mott/Нохчийн мотт
         ckb: 'Sorani - سۆرانی '
         cpe: Kamtok - Pidgin
         cus: Saho - ሳሆኛ
@@ -1270,6 +1273,7 @@ de:
         hrv: Kroatisch - hrvatski
         hun: Ungarisch - magyar
         ita: Italienisch - italiano
+        jpn: Japanisch - 日本語
         kik: Kikuyu - Gĩkũyũ
         kin: Kinyarwanda - kinyaRwanda
         kor: Koreanisch - 한국말 / 조선말
