--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -560,6 +560,7 @@ en:
         bul: Bul
         bur: Bur
         cau: Cau
+        che: Che
         ckb: Ckb
         cpe: Cpe
         cus: Cus
@@ -588,6 +589,7 @@ en:
         hrv: Hrv
         hun: Hun
         ita: Ita
+        jpn: Jpn
         kik: Kik
         kin: Kin
         kor: Kor
@@ -813,6 +815,7 @@ en:
         bul: Bulgarian - български
         bur: Burmese - မြန်မာစာ
         cau: Abaza - абаза бызшва
+        che: Chechen - Noxčiyn mott/Нохчийн мотт
         ckb: 'Sorani - سۆرانی '
         cpe: Kamtok - Pidgin
         cus: Saho - ሳሆኛ
@@ -841,6 +844,7 @@ en:
         hrv: Kroatian - hrvatski
         hun: Hungarian - magyar
         ita: Italian - italiano
+        jpn: Japanese - 日本語
         kik: Kikuyu - Gĩkũyũ
         kin: Kinyarwanda - kinyaRwanda
         kor: Korean - 한국말 / 조선말
