--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -557,6 +557,7 @@ fa:
         bul: Bul
         bur: Bur
         cau: Cau
+        che: Che
         ckb: Ckb
         cpe: Cpe
         cus: Cus
@@ -585,6 +586,7 @@ fa:
         hrv: Hrv
         hun: Hun
         ita: Ita
+        jpn: Jpn
         kik: Kik
         kin: Kin
         kor: Kor
@@ -824,6 +826,7 @@ fa:
         bul: بلغاری - български
         bur: برمهای - မြန်မာစာ
         cau: زبان آبازی - абаза бызшва
+        che: زبان چچنی - Noxčiyn mott/Нохчийн мотт
         ckb: 'سورانی - سۆرانی '
         cpe: کامرونی - Pidgin
         cus: Saho - ሳሆኛ
@@ -852,6 +855,7 @@ fa:
         hrv: کروات - Kroatisch
         hun: مجاری - magyar
         ita: ایتالیایی -  italiano
+        jpn: زبان ژاپنی - 日本語
         kik: کیکویو - Gĩkũyũ
         kin: رواندایی - kinyaRwanda
         kor: کره ای -  한국말 / 조선말
