--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -594,6 +594,7 @@ fr:
         bul: Bul
         bur: Bur
         cau: Cau
+        che: Che
         ckb: Ckb
         cpe: Cpe
         cus: Cus
@@ -622,6 +623,7 @@ fr:
         hrv: Hrv
         hun: Hun
         ita: Ita
+        jpn: Jpn
         kik: Kik
         kin: Kin
         kor: Kor
@@ -847,6 +849,7 @@ fr:
         bul: Bulgare - български
         bur: birman - မြန်မာစာ
         cau: Abaza - абаза бызшва
+        che: Tchétchène - Noxčiyn mott/Нохчийн мотт
         ckb: 'Sorani - سۆرانی '
         cpe: Pidgin camerounais - Pidgin
         cus: Saho - ሳሆኛ
@@ -875,6 +878,7 @@ fr:
         hrv: Croate - hrvatski
         hun: Hongrois - magyar
         ita: Italien - italiano
+        jpn: Japonais - 日本語
         kik: Kikuyu - Gĩkũyũ
         kin: Kinyarwanda - kinyaRwanda
         kor: Coréen - 한국말 / 조선말
