--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -618,6 +618,7 @@ ru:
         bul: Bul
         bur: Bur
         cau: Cau
+        che: Che
         ckb: Ckb
         cpe: Cpe
         cus: Cus
@@ -646,6 +647,7 @@ ru:
         hrv: Hrv
         hun: Hun
         ita: Ita
+        jpn: Jpn
         kik: Kik
         kin: Kin
         kor: Kor
@@ -876,6 +878,7 @@ ru:
         bul: Болгарский язык - български
         bur: бирманский - မြန်မာစာ
         cau: Абазинский язык - абаза бызшва
+        che: Чече́нский язы́к - Noxčiyn mott/Нохчийн мотт
         ckb: 'Сорани́ - سۆرانی '
         cpe: Камток-Пиджин
         cus: Сaxo - ሳሆኛ
@@ -904,6 +907,7 @@ ru:
         hrv: Хорватский язык - hrvatski
         hun: Венгерский язык - magyar
         ita: Итальянский язык - italiano
+        jpn: Япо́нский язы́к - 日本語
         kik: Кикуйю язык - Gĩkũyũ
         kin: Киньяруанда - кинья-руанда
         kor: Корейский язык - 한국말 / 조선말
