--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -518,6 +518,7 @@ tr:
         bul: Bul
         bur: Bur
         cau: Cau
+        che: Che
         ckb: Ckb
         cpe: Cpe
         cus: Cus
@@ -546,6 +547,7 @@ tr:
         hrv: Hrv
         hun: Hun
         ita: Ita
+        jpn: Jpn
         kik: Kik
         kin: Kin
         kor: Kor
@@ -766,6 +768,7 @@ tr:
         bul: Bulgarca - български
         bur: Birmanyalı - မြန်မာစာ
         cau: Abazaca - абаза бызшва
+        che: Çeçence - Noxčiyn mott/Нохчийн мотт
         ckb: Soranice - سۆرانی
         cpe: Kamtok - Pidgin
         cus: Saho - ሳሆኛ
@@ -794,6 +797,7 @@ tr:
         hrv: Hırvatça - hrvatski
         hun: Macarca - magyar
         ita: İtalyanca - italiano
+        jpn: Japonca - 日本語
         kik: Kikuyu - Gĩkũyũ
         kin: Ruandaca - kinyaRwanda
         kor: Korece - 한국말 / 조선말
