--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1404,7 +1404,7 @@ de:
             refugees:
               heading: 
               text: 
-            text: Wir sind ein gemeinnütziges Projekt der Benckiser Stiftung Zukunft. Die Stiftung möchte Kinder, Jugendlichen und Familien in schwierigen Situationen helfen.
+            text: Wir sind ein gemeinnütziges Projekt der Benckiser Stiftung Zukunft. Die Stiftung möchte Kindern, Jugendlichen und Familien in schwierigen Situationen helfen.
       footer:
         about: Über uns
         blog: Blog
