--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -976,11 +976,11 @@ fa:
               text: 
             text: ما تو را در پیدا کردن کمک مناسب،یاری می کنیم.ما به تمام کمکها نظم می دهیم و از طریق یک زبان ساده آنها را قابل درک می کنیم.
           what:
-            heading: ما چه چیزی را می خواهیم؟
+            heading: هدف ما چیست؟
             refugees:
               heading: 
               text: 
-            text: صفحه clarat از طریق پیشنهادهای کمکی، شفاف سازی می کند.
+            text: صفحه clarat پیشنهادهای کمکی در آلمان را به صورت شفاف نشان می دهد.ما می خواهیم هر کسی که نیاز به کمک دارد آن را پیدا کند.
           who:
             heading: ما کی هستیم؟
             refugees:
@@ -1027,7 +1027,7 @@ fa:
           family: کمک برای کودکان،جوانان و خانواده ها
         hero:
           button_label: کسب اطلاعات بیشتر
-          logline: کمک مناسب خود را پیدا کن-با توضیح کامل و قابل مشاهده به آسانی
+          logline: کمک مناسب خود را پیدا کن-با توضیحات کامل و قابل مشاهده به آسانی
       modal:
         beta_modal:
           link: برای ما پیغام بنویسید
@@ -1454,7 +1454,7 @@ fa:
       meta_title: clarat شفاف سازی می کند | clarat
       mission:
         headline: وظیفه ما
-        text: کمکهایی را که در آلمان وجود دارند، قابل مشاهده کنند و به راحتی توضیح بدهند.
+        text: 'نشان دادن کمکهایی را که در آلمان وجود دارند و توضیح ساده آنها.   '
       title: لطفا موضوع خود را از دنیای clarat انتخاب کنید
     shared:
       address:
