--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -986,7 +986,7 @@ fa:
             refugees:
               heading: 
               text: 
-            text: ما یک پروژه عام عام‌المنفعه وابسته به بنیاد Benckiser Stiftung Zukunft هستیم.هدف این بنیاد کمک به کودکان،جوانان و خانواده های دارای شرایط سخت در زندگی است.
+            text: ما یک پروژه عام‌المنفعه وابسته به بنیاد Benckiser Stiftung Zukunft هستیم.هدف این بنیاد کمک به کودکان،جوانان و خانواده های دارای شرایط سخت در زندگی است.
       footer:
         about: در مورد ما
         blog: بلاگ
