--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -1014,7 +1014,7 @@ fa:
         contact: تماس
         faq: سوالات رایج
         languages:
-          ar: 
+          ar: عربی
           de: 
           en: 
           fa: فارسی
